--- a/css/ui/_structure_firstpage.scss
+++ b/css/ui/_structure_firstpage.scss
@@ -70,7 +70,7 @@
 	}
 }
 .home .img-wrapper .slideshow {
-	@extend .hidden;
+	@extend .force-hidden--palm;
 }
 .home .contact-area .contact-wrapper {
 	line-height: 0;
